# rustune

./: Cargo.toml  README.md
src/: datfile.rs  discovery.rs  fortune_engine.rs  lib.rs  logging.rs  main.rs  rng.rs  sources.rs  strfile_builder.rs
tests/: fortune_cli.rs  strfile_proptest.rs  strfile_roundtrip.rs
tests/corpus/: alpha  beta
