[package]
name = "rustune"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.25.0"

[[bin]]
name = "rustune"
path = "src/main.rs"

[[bin]]
name = "strfile"
path = "src/bin/strfile.rs"

[[bin]]
name = "fortune-parity"
path = "src/bin/fortune-parity.rs"
